# Louder

./: .gitignore  .ycm_extra_conf.py  meson.build
glibsoundcloud/: sc-api.c  sc-api.h  sc-song.c  sc-song.h
src/: async-image-widget.c  async-image-widget.h  louder-application.c  louder-application.h  louder-avatar-widget.c  louder-avatar-widget.h  louder-player-bar.c  louder-player-bar.h  louder-sidebar-row.c  louder-sidebar-row.h  louder-song-list-box.c  louder-song-list-box.h  louder-song-list-row.c  louder-song-list-row.h  louder-window.c  louder-window.h  main.c  meson.build  tags.lq88SE
src/ui/: action_box.ui  louder-player-bar.ui  louder-sidebar-row.ui  louder-song-list-row.ui  louder-window.ui  louder.gresource.xml  window.ui
src/ui/css/: louder.css
